no funciona rutas

--- a/.env.production
+++ b/.env.production
@@ -16,5 +16,5 @@ JWT_SECRET=diferco_secret_key_production_2025_secure_random_key
 CLOUDINARY_CLOUD_NAME=djhynxo9d
 CLOUDINARY_UPLOAD_PRESET=react_unsigned
 
-# CORS - Actualiza con tu dominio de producción del frontend
-CORS_ORIGIN=http://159.65.107.23,https://tu-dominio-frontend.com
+# CORS - Dominios permitidos
+CORS_ORIGIN=https://www.sisventa.org,http://www.sisventa.org,http://159.65.107.23
