--- a/.env
+++ b/.env
@@ -1,24 +1,22 @@
-# Configuración del servidor
+# Configuracion del servidor
 PORT=3001
 NODE_ENV=development
 
-# Configuración de MySQL - LOCAL
+# Configuracion de MySQL - LOCAL
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=admin
 DB_NAME=diferco_videos
 DB_PORT=3306
 
-# JWT Secret (cambiar en producción)
+# JWT Secret (cambiar en produccion)
 JWT_SECRET=diferco_secret_key_2025_cambiar_en_produccion
-
-# Cloudinary (mantener para subida de videos)
-CLOUDINARY_CLOUD_NAME=djhynxo9d
-CLOUDINARY_UPLOAD_PRESET=react_unsigned
 
 # CORS
 CORS_ORIGIN=http://localhost:8080
 
-# MEGA - Configurar con tus credenciales
-MEGA_EMAIL=javierjava@gmail.com
-MEGA_PASSWORD=Jagomez22**
+# Google Cloud Storage
+GCS_BUCKET_NAME=diferco
+GCS_PROJECT_ID=macgenesis
+# Ruta al archivo de credenciales JSON (opcional si usas gcs-credentials.json en la raiz del backend)
+# GCS_KEY_FILE=./gcs-credentials.json
