--- a/.env.production
+++ b/.env.production
@@ -1,20 +1,18 @@
-# Configuración del servidor - PRODUCCIÓN
 PORT=3001
 NODE_ENV=production
 
 # Configuración de MySQL - PRODUCCIÓN VPS
-DB_HOST=localhost
-DB_USER=root
+DB_HOST=159.65.107.23
+DB_USER=motocom
 DB_PASSWORD=S3rv3r_2025@JAV!
 DB_NAME=diferco_videos
 DB_PORT=3306
 
 # JWT Secret (producción)
 JWT_SECRET=diferco_secret_key_production_2025_secure_random_key
-
-# Cloudinary (mantener para subida de videos)
-CLOUDINARY_CLOUD_NAME=djhynxo9d
-CLOUDINARY_UPLOAD_PRESET=react_unsigned
+# MEGA - Configurar con tus credenciales
+MEGA_EMAIL=javierjava@gmail.com
+MEGA_PASSWORD=Jagomez22**
 
 # CORS - Dominios permitidos
 CORS_ORIGIN=https://www.sisventa.org,http://www.sisventa.org,http://159.65.107.23
